--- a/org.jcryptool.analysis.ngram/build.properties
+++ b/org.jcryptool.analysis.ngram/build.properties
@@ -4,4 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
+               nl/,\
+               asset/,\
                contexts.xml
